# calendarium

./: README.md  pyproject.toml
src/calendarium/: __init__.py
src/calendarium/timelines/: TimelineRepresentationUnits.py  TimelineRepresentor.py  __init__.py  timeline.py  timerange.py  timespot.py
