[project]
name = "calendarium"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladislav V.",email = "vladislav.martian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arrow (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "calendarium", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
